# minisearch-wasm

./: .gitignore  Cargo.toml  PORTING.md  README.md  package.json
.cargo/: config.toml
scripts/: finalize-pkg.mjs
src/: lib.rs  mini_search.rs  searchable_map.rs
tests/: minisearch_conformance.rs  searchable_map_conformance.rs
