[package]
name = "minisearch-wasm"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Rust and WebAssembly full-text search engine inspired by MiniSearch"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
unicode-general-category = "0.6"
wasm-bindgen = "0.2"

[dev-dependencies]
serde_json = "1"

# Maximize runtime speed of the generated Wasm. The search path is hot and the
# crate is small, so whole-program LTO + a single codegen unit are cheap wins.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
